--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/alipiry/persian-captcha-generator.git"
+    "url": "git+https://github.com/alipiry/persian-captcha-generator.git"
   },
   "bugs": {
     "url": "https://github.com/alipiry/persian-captcha-generator/issues"
