--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "persian-captcha-generator",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A lightweight library for generating customizable captchas with Persian numbers and alphabets.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -9,22 +9,6 @@
     "test": "jest",
     "start": "node dist/index.js"
   },
-  "files": [
-    "dist",
-    "fonts",
-    "images",
-    "README.md"
-  ],
-  "keywords": [
-    "captcha",
-    "persian",
-    "numbers",
-    "alphabets",
-    "typescript",
-    "security"
-  ],
-  "author": "Ali Piry",
-  "license": "MIT",
   "dependencies": {
     "sharp": "^0.33.5"
   },
@@ -36,6 +20,22 @@
     "ts-jest": "^29.2.5",
     "typescript": "^5.7.2"
   },
+  "files": [
+    "dist",
+    "fonts",
+    "README.md"
+  ],
+  "keywords": [
+    "captcha",
+    "persian",
+    "numbers",
+    "alphabets",
+    "typescript",
+    "security",
+    "persian-captcha"
+  ],
+  "author": "Ali Piry",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/alipiry/persian-captcha-generator.git"
