--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "persian-captcha-generator",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "description": "A lightweight library for generating customizable captchas with Persian numbers and alphabets.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -21,6 +21,7 @@
     "typescript": "^5.7.2"
   },
   "files": [
+    "dist",
     "README.md"
   ],
   "keywords": [
