--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "sharp": "^0.33.5"
   },
   "devDependencies": {
