--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && copyfiles -u 1 fonts/**/* dist/fonts",
     "test": "jest",
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "canvas": "^2.11.2"
+    "canvas": "^2.11.2",
+    "copyfiles": "^2.4.1"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
