--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "canvas": "^2.11.2"
+    "@napi-rs/canvas": "^0.1.65"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
