--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "test": "jest",
-    "start": "node dist/index.js"
+    "test": "jest"
   },
   "dependencies": {
     "@napi-rs/canvas": "^0.1.65"
@@ -15,7 +14,6 @@
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.2",
-    "@types/sharp": "^0.32.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
     "typescript": "^5.7.2"
